# Public-ESPN-API

./: .gitignore  README.md  app.py  db.py
espn_service/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml
espn_service/apps/: __init__.py
espn_service/apps/core/: __init__.py  apps.py  exceptions.py  middleware.py  views.py
espn_service/apps/espn/: __init__.py  admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
espn_service/apps/espn/migrations/: 0001_initial.py
espn_service/apps/ingest/: __init__.py  apps.py  serializers.py  services.py  tasks.py  urls.py  views.py
espn_service/apps/ingest/management/: __init__.py
espn_service/apps/ingest/management/commands/: __init__.py  ingest_scoreboard.py  ingest_teams.py
espn_service/clients/: __init__.py  espn_client.py
espn_service/config/: asgi.py  celery.py  urls.py  wsgi.py
espn_service/config/settings/: __init__.py  base.py  local.py  production.py  test.py
espn_service/tests/: conftest.py  test_api.py  test_espn_client.py  test_ingestion.py  test_models.py
